--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -73,9 +73,9 @@
         <a class="navbar-brand navbar-logo" href="#"><img src="navbarlogo.png" alt="logo" height="66"></a>
         <svg viewBox="0 0 512 512" width="30" title="sign-out-alt" id="signout">
   <path d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z" />
-</svg>
-
-<svg viewBox="0 0 496 512" width="30" title="user-circle" id="updateAccountLogo" onclick="window.location.href='editAdmin.html'">
+  </svg>
+  
+  <svg viewBox="0 0 496 512" width="30" title="user-circle" id="updateAccountLogo" onclick="window.location.href='editAdmin.html'">
     <path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z" />
   </svg>
         <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,16 +83,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
-                <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0);"></a>
-                </li>
-
+              <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
+              <li class="nav-item active">
+                  <a class="nav-link" href="javascript:void(0);"></a>
+              </li>
+  
                 <li class="nav-item ">
-                    <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
+                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
                 </li>
              
-
+                <li class="nav-item ">
+                    <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);">الأحداث</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                </li>
+  
             </ul>
         </div>
     </nav>
