--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -33,18 +33,19 @@
     <link rel="stylesheet" href="create.css">
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
     <script type="module" src="addAdmin.js"></script>
-    <link rel="stylesheet" href="navbar.css"/>
-    <script src="navbar.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="navbar.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
+<link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="navbar.js"></script>
+
     <style>
    main {
   margin: 0;
@@ -83,11 +84,22 @@
                 <a class="nav-link" href="javascript:void(0);"></a>
             </li>
 
-              <li class="nav-item active">
-                  <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
+              <li class="nav-item ">
+                  <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
               </li>
            
-        
+              <li class="nav-item ">
+                  <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0);">الأحداث</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0);">المستندات</a>
+              </li>
 
           </ul>
       </div>
